// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots BasicView Default 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <div
          style="height: 100vh; width: 100%; background: gray;"
        >
          <div
            class="MuiBox-root MuiBox-root-268"
          >
            <div
              class="MuiBox-root MuiBox-root-269"
            >
              <div
                class="div-root-270"
              >
                <h5
                  class="MuiTypography-root MuiTypography-h5 MuiTypography-colorInherit MuiTypography-alignCenter"
                >
                  <strong>
                    Looks like you're the only one here,
                  </strong>
                </h5>
                <h5
                  class="MuiTypography-root MuiTypography-h5 MuiTypography-colorInherit MuiTypography-alignCenter"
                >
                  <strong>
                    send out this link to invite someone!
                  </strong>
                </h5>
                <h6
                  class="MuiTypography-root MuiTypography-h6 MuiTypography-colorPrimary MuiTypography-alignCenter"
                >
                  <div
                    class="MuiBox-root MuiBox-root-314 Styled(MuiBox)-root-313"
                    title="Copied!"
                  >
                    http://localhost/
                  </div>
                </h6>
              </div>
            </div>
            <div
              class="div-root-315"
            >
              <div
                class="MuiPaper-root MuiCard-root WithStyles(ForwardRef(Card))-root-316 WithStyles(ForwardRef(Card))-root-317 MuiPaper-elevation10 MuiPaper-rounded"
              >
                <div
                  class="MuiBox-root MuiBox-root-347"
                >
                  <div
                    class="div-root-354"
                  >
                    <div
                      class="div-root-355"
                    >
                      <video
                        autoplay=""
                        class="makeStyles-mirroredVideo-349 makeStyles-video-348  "
                        playsinline=""
                      />
                    </div>
                    <div
                      class="div-root-356"
                    >
                      <div
                        class="div-root-357"
                      >
                        <div
                          class="div-root-358"
                        >
                          <svg
                            viewBox="0 0 100 100"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <circle
                              cx="50"
                              cy="50"
                              fill="#67e4a6"
                              r="NaN"
                            />
                            <circle
                              cx="50"
                              cy="50"
                              fill-opacity="0"
                              r="NaN"
                              stroke="white"
                              stroke-opacity="0.5"
                              stroke-width="4"
                            />
                          </svg>
                        </div>
                      </div>
                      <span>
                        (You)
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <div
        style="height: 100vh; width: 100%; background: gray;"
      >
        <div
          class="MuiBox-root MuiBox-root-268"
        >
          <div
            class="MuiBox-root MuiBox-root-269"
          >
            <div
              class="div-root-270"
            >
              <h5
                class="MuiTypography-root MuiTypography-h5 MuiTypography-colorInherit MuiTypography-alignCenter"
              >
                <strong>
                  Looks like you're the only one here,
                </strong>
              </h5>
              <h5
                class="MuiTypography-root MuiTypography-h5 MuiTypography-colorInherit MuiTypography-alignCenter"
              >
                <strong>
                  send out this link to invite someone!
                </strong>
              </h5>
              <h6
                class="MuiTypography-root MuiTypography-h6 MuiTypography-colorPrimary MuiTypography-alignCenter"
              >
                <div
                  class="MuiBox-root MuiBox-root-314 Styled(MuiBox)-root-313"
                  title="Copied!"
                >
                  http://localhost/
                </div>
              </h6>
            </div>
          </div>
          <div
            class="div-root-315"
          >
            <div
              class="MuiPaper-root MuiCard-root WithStyles(ForwardRef(Card))-root-316 WithStyles(ForwardRef(Card))-root-317 MuiPaper-elevation10 MuiPaper-rounded"
            >
              <div
                class="MuiBox-root MuiBox-root-347"
              >
                <div
                  class="div-root-354"
                >
                  <div
                    class="div-root-355"
                  >
                    <video
                      autoplay=""
                      class="makeStyles-mirroredVideo-349 makeStyles-video-348  "
                      playsinline=""
                    />
                  </div>
                  <div
                    class="div-root-356"
                  >
                    <div
                      class="div-root-357"
                    >
                      <div
                        class="div-root-358"
                      >
                        <svg
                          viewBox="0 0 100 100"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <circle
                            cx="50"
                            cy="50"
                            fill="#67e4a6"
                            r="NaN"
                          />
                          <circle
                            cx="50"
                            cy="50"
                            fill-opacity="0"
                            r="NaN"
                            stroke="white"
                            stroke-opacity="0.5"
                            stroke-width="4"
                          />
                        </svg>
                      </div>
                    </div>
                    <span>
                      (You)
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Storyshots Chat Default 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <div
          style="height: 100vh; width: 100%; background: rgb(30, 31, 35);"
        >
          <div
            class="div-root-363"
          >
            <div
              class="div-root-364"
            />
            <div
              class="div-root-365"
            >
              <form>
                <input
                  class="input-root-366"
                  value=""
                />
              </form>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <div
        style="height: 100vh; width: 100%; background: rgb(30, 31, 35);"
      >
        <div
          class="div-root-363"
        >
          <div
            class="div-root-364"
          />
          <div
            class="div-root-365"
          >
            <form>
              <input
                class="input-root-366"
                value=""
              />
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Storyshots DraggableSplitWrapper Default 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <div
          class="MuiBox-root MuiBox-root-382"
        >
          <div
            class="MuiBox-root MuiBox-root-383"
          >
            <div
              class="MuiBox-root MuiBox-root-384"
            >
              <div
                class="MuiBox-root MuiBox-root-387 Styled(MuiBox)-root-385 Styled(MuiBox)-root-386"
              >
                <div
                  class="MuiBox-root MuiBox-root-388"
                >
                  hi
                </div>
              </div>
              <div
                class="MuiBox-root MuiBox-root-389"
              >
                <div
                  class="div-root-390 div-root-391"
                  width="5"
                />
              </div>
              <div
                class="MuiBox-root MuiBox-root-393 Styled(MuiBox)-root-385 Styled(MuiBox)-root-392"
              >
                <div
                  class="MuiBox-root MuiBox-root-394"
                >
                  hi
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <div
        class="MuiBox-root MuiBox-root-382"
      >
        <div
          class="MuiBox-root MuiBox-root-383"
        >
          <div
            class="MuiBox-root MuiBox-root-384"
          >
            <div
              class="MuiBox-root MuiBox-root-387 Styled(MuiBox)-root-385 Styled(MuiBox)-root-386"
            >
              <div
                class="MuiBox-root MuiBox-root-388"
              >
                hi
              </div>
            </div>
            <div
              class="MuiBox-root MuiBox-root-389"
            >
              <div
                class="div-root-390 div-root-391"
                width="5"
              />
            </div>
            <div
              class="MuiBox-root MuiBox-root-393 Styled(MuiBox)-root-385 Styled(MuiBox)-root-392"
            >
              <div
                class="MuiBox-root MuiBox-root-394"
              >
                hi
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Storyshots ErrorPage Default 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <div
          class="MuiTypography-root MuiTypography-body1"
        >
          <div
            class="MuiBox-root MuiBox-root-65"
          >
            Oops... The link you are trying to reach cannot be found
          </div>
          <div
            class="MuiBox-root MuiBox-root-66"
          >
            <a
              href="/"
            >
              Go Home
            </a>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <div
        class="MuiTypography-root MuiTypography-body1"
      >
        <div
          class="MuiBox-root MuiBox-root-65"
        >
          Oops... The link you are trying to reach cannot be found
        </div>
        <div
          class="MuiBox-root MuiBox-root-66"
        >
          <a
            href="/"
          >
            Go Home
          </a>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Storyshots Group/ActivityTabs Default 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <div
          class="MuiTabs-root MuiTabs-vertical"
        >
          <div
            class="MuiTabs-scroller MuiTabs-fixed"
            style="overflow: hidden;"
          >
            <div
              class="MuiTabs-flexContainer MuiTabs-flexContainerVertical"
              role="tablist"
            >
              <button
                aria-controls="scrollable-force-tabpanel-0"
                aria-label="Basic Video"
                aria-selected="true"
                class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary Mui-selected"
                id="scrollable-force-tab-0"
                role="tab"
                style="min-width: 50px; width: 100%; padding: 16px;"
                tabindex="0"
                title="Basic Video"
                type="button"
              >
                <span
                  class="MuiTab-wrapper"
                >
                  <span
                    aria-hidden="true"
                    class="material-icons MuiIcon-root"
                  >
                    video_call
                  </span>
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
              <button
                aria-controls="scrollable-force-tabpanel-1"
                aria-label="Browse Together"
                aria-selected="false"
                class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary"
                id="scrollable-force-tab-1"
                role="tab"
                style="min-width: 50px; width: 100%; padding: 16px;"
                tabindex="-1"
                title="Browse Together"
                type="button"
              >
                <span
                  class="MuiTab-wrapper"
                >
                  <span
                    aria-hidden="true"
                    class="material-icons MuiIcon-root"
                  >
                    web
                  </span>
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </div>
            <span
              class="PrivateTabIndicator-root-171 PrivateTabIndicator-colorPrimary-172 MuiTabs-indicator makeStyles-tabsIndicator-116 PrivateTabIndicator-vertical-174"
              style="top: 0px; height: 0px;"
            />
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <div
        class="MuiTabs-root MuiTabs-vertical"
      >
        <div
          class="MuiTabs-scroller MuiTabs-fixed"
          style="overflow: hidden;"
        >
          <div
            class="MuiTabs-flexContainer MuiTabs-flexContainerVertical"
            role="tablist"
          >
            <button
              aria-controls="scrollable-force-tabpanel-0"
              aria-label="Basic Video"
              aria-selected="true"
              class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary Mui-selected"
              id="scrollable-force-tab-0"
              role="tab"
              style="min-width: 50px; width: 100%; padding: 16px;"
              tabindex="0"
              title="Basic Video"
              type="button"
            >
              <span
                class="MuiTab-wrapper"
              >
                <span
                  aria-hidden="true"
                  class="material-icons MuiIcon-root"
                >
                  video_call
                </span>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
            <button
              aria-controls="scrollable-force-tabpanel-1"
              aria-label="Browse Together"
              aria-selected="false"
              class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary"
              id="scrollable-force-tab-1"
              role="tab"
              style="min-width: 50px; width: 100%; padding: 16px;"
              tabindex="-1"
              title="Browse Together"
              type="button"
            >
              <span
                class="MuiTab-wrapper"
              >
                <span
                  aria-hidden="true"
                  class="material-icons MuiIcon-root"
                >
                  web
                </span>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </div>
          <span
            class="PrivateTabIndicator-root-171 PrivateTabIndicator-colorPrimary-172 MuiTabs-indicator makeStyles-tabsIndicator-116 PrivateTabIndicator-vertical-174"
            style="top: 0px; height: 0px;"
          />
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
